Test Run and Final Documentation

--- a/SportyShoes/src/main/resources/templates/adminGetOrdersByDate.html
+++ b/SportyShoes/src/main/resources/templates/adminGetOrdersByDate.html
@@ -24,6 +24,7 @@
 	
 		<label>From Date:</label>
 		<input type="date" value="From Date" name="fromDate" required>
+		<label>To Date:</label>
 		<input type="date" value="To Date" name="toDate" required>
 		<br/><br/>
 		<input type="submit" value="View Orders" name=viewOrders>
